// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Professor Profile view matches the snapshot 1`] = `
<div
  className="sc-bdnxRM gaCZnh"
  height="115px"
  width="240px"
>
  <p>
    Nome Completo: 
  </p>
  <p>
    E-mail: 
  </p>
</div>
`;

exports[`Snapshot Professor Profile view matches the snapshot 2`] = `
<div
  className="sc-bdnxRM jsRjrT"
  height="115px"
  width="430px"
>
  <p>
    Quantidade de avaliações recebidas: 
    0
  </p>
  <p>
    Pontuação média recebida: 
    0
  </p>
</div>
`;
